<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.stimasoft.obiectivecva.AddEditObjective">

    <item android:id="@+id/action_toggle_map"
        android:icon="@drawable/ic_layers_white_48dp"
        android:title="@string/action_button_title_mapToggle"
        app:showAsAction="ifRoom|withText" >
	      <menu>
	        <item
	            android:id="@+id/mapModHybrid"
	            android:title="@string/action_button_title_mapModHybrid" />
	        <item
	            android:id="@+id/mapModNormal"
	            android:title="@string/action_button_title_mapModNormal" />
	        <item
	            android:id="@+id/mapModTerrain"
	            android:title="@string/action_button_title_mapModTerrain" />
	      </menu>
    </item>
    
    <item android:id="@+id/action_save"
        android:icon="@drawable/ic_save_white_48dp"
        android:title="@string/action_button_title_save"
        app:showAsAction="always|withText" />
</menu>
