<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.stimasoft.obiectivecva.MapActivity">
    <!-- Search / will display always -->
    
    <item android:id="@+id/action_toggle_map"
        android:icon="@drawable/ic_layers_white_48dp"
        android:title=""
        app:showAsAction="ifRoom|withText" >
	      <menu>
	        <item
	            android:id="@+id/mapModHybrid"
	            android:title="@string/action_button_title_mapModHybrid" />
	        <item
	            android:id="@+id/mapModNormal"
	            android:title="@string/action_button_title_mapModNormal" />
	        <item
	            android:id="@+id/mapModTerrain"
	            android:title="@string/action_button_title_mapModTerrain" />
	      </menu>
    </item>
    
    <item android:id="@+id/menu_search"
        android:icon="@drawable/ic_filter_list_white_48dp"
        android:title="@string/action_search"
        android:label="@string/action_search"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_switch_list"
        android:icon="@drawable/ic_list_white_48dp"
        android:title="Mod Lista"
        app:showAsAction="always|withText"  />
    <!-- Help -->
    <!--<item android:id="@+id/action_help"-->
        <!--android:icon="@android:drawable/ic_menu_help"-->
        <!--android:title="@string/action_help"-->
        <!--android:label="@string/action_help"-->
        <!--app:showAsAction="never"/>-->


</menu>
