<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/relativeLayout_authenticatorRoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Authenticator">

        <EditText
            android:id="@+id/editText_username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/authenticator_hint_username"
            android:imeOptions="actionNext"
            android:singleLine="true" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/authenticator_hint_password"
            android:imeOptions="actionSend"
            android:inputType="textPassword"
            android:singleLine="true" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioGroup_roles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_consultant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/authenticator_text_radio_consultant" />

            <RadioButton
                android:id="@+id/radio_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authenticator_text_radio_director" />

        </RadioGroup>

        <Button
            android:id="@+id/button_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/authenticator_text_button_login" />

    </LinearLayout>

</ScrollView>
