<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:padding="1dp"
    android:layout_weight="@integer/abc_config_activityDefaultDur"
    android:minWidth="300dip">    
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:background="#ffbff5ff"
        >

        <ImageView
            android:layout_width="70dp"
            android:layout_height="67dp"
            android:id="@+id/imageView2"
            android:src="@android:drawable/ic_menu_myplaces"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/objective_details_label_objective_name"
            android:id="@+id/txtTitle"
            android:layout_gravity="center"

            />
    </LinearLayout>
    
    <!-- Objective Number, Author: Alin -->
       <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="2dp">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lbl_number"
            android:id="@+id/lblNumber"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/txtNumber"
            android:layout_gravity="bottom" />
    </LinearLayout>
    <!-- End Objective Number -->
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="2dp">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lbl_stage"
            android:id="@+id/lblStage"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/txtStage"
            android:layout_gravity="bottom" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="2dp">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lbl_phase"
            android:id="@+id/lblPhase"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/txtPhase"
            android:layout_gravity="bottom" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="2dp">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lbl_phase_expiration"
            android:id="@+id/lblExpirationDate"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/txtExpirationDate"
            android:layout_gravity="bottom" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp"
        android:background="@color/common_signin_btn_dark_text_disabled"
        android:padding="2dp">

        <TextView
            android:id="@+id/txtInfoWindow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txtInfoWindow"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:textSize="@dimen/abc_text_size_body_2_material"
            android:gravity="center"
            />


    </LinearLayout>
</LinearLayout>
